--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "wikipedia-reading-mode",
   "module": "index.js",
+  "version": "0.0.1-alpha.2",
   "type": "module",
   "scripts": {
     "build": "bun scripts/build.ts",
     "dev": "bun scripts/dev.ts",
-    "serve": "bun server.ts"
+    "serve": "bun server.ts",
+    "release": "bumpp"
   },
   "devDependencies": {
+    "bumpp": "^9.4.0",
     "bun-types": "latest"
   },
   "peerDependencies": {
